--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./ccp_this_problem_6.js"></script>
+    <script type="module" src="./ccp_this_problem_7.js"></script>
     <title>Document</title>
 </head>
 <body>
