Using call() to Access Object Properties

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./ccp_this_problem_6.js"></script>
     <script type="module" src="./ccp_this_problem_7.js"></script>
+    <script type="module" src="./ccp_this_problem_8.js"></script>
     <title>Document</title>
 </head>
 <body>
