Deep vs Shallow copy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="module" src="./ccp_this_problem_6.js"></script>
     <script type="module" src="./ccp_this_problem_7.js"></script>
     <script type="module" src="./ccp_this_problem_8.js"></script>
+    <script type="module" src="./ccp_this_problem_9.js"></script>
     <title>Document</title>
 </head>
 <body>
